# duckdb_rdkit

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: ROADMAP.md
docs/design/: native-mol-format.md
docs/issues/: 001-mol-representation.md  002-fingerprint-support.md  003-postgresql-parity.md  004-additional-scanners.md  005-copy-to-formats.md  006-test-robustness.md
src/: cast.cpp  dalke_fp.cpp  duckdb_rdkit_extension.cpp  mol_compare.cpp  mol_descriptors.cpp  mol_formats.cpp  rdkit_log.cpp  types.cpp  umbra_mol.cpp
src/include/: dalke_fp.hpp  rdkit_log.hpp  types.hpp  umbra_mol.hpp
src/include/sdf_scanner/: sdf_scan.hpp
src/sdf_scanner/: sdf_functions.cpp  sdf_scan.cpp
test/sql/: dalke_fp.test  mol_conversion.test  mol_descriptors.test  mol_search.test  mol_storage.test  umbramol.test
test/sql/sdf_scanner/: read_sdf.test
